# design

./: .aiignore  .gitignore  GENERATOR-CONTRACT.md  LICENSE  README.md  SKILL.md  analytical-slide-coauthoring-bundle.md  chart-routing-coverage-draft.md  chart-routing-guide.md  convert.cjs  handoff-design-e2e-20260615.md  handoff-improvements-20260613.md  handoff-stress-loop-20260619.md  handoff-sweetspot-20260614.md  handoff-vp-pf-crossverify-20260615.md  package-lock.json  package.json  plan-design-e2e.md  plan-flow-restore.md  plan-fpna-charts.md  plan.md  progress-fpna-charts.md  progress.md
design-system/pptx/: ARCHITECTURE.md  README.md  _build_fpna_charts.py  pyproject.toml
design-system/pptx/deck_system/: __init__.py  cli.py  errors.py  quick.py
design-system/pptx/deck_system/adapter/: __init__.py  profile.py  theme_from_profile.py
design-system/pptx/deck_system/builder/: __init__.py  builder.py  inference.py  registry.py  spec_normalizer.py  tone.py  validation.py
design-system/pptx/deck_system/helpers/: __init__.py  chrome.py  image_placeholder.py  shapes.py  text.py
design-system/pptx/deck_system/layouts/: __init__.py  _variance_logic.py  compare.py  data_chart.py  data_special.py  data_table.py  fc_breakeven.py  fc_cohort_heatmap.py  fc_combo.py  fc_driver_tree.py  fc_heatmap.py  fc_overlapping_line.py  fc_pvm_bridge.py  fc_scatter.py  fc_scenario_summary.py  fc_tornado.py  fc_treemap.py  fpna_charts.py  matrix.py  narrative.py  (+7 more)
design-system/pptx/docs/: adapter.md  image_policy.md  layouts.md  qa.md  troubleshooting.md  typography.md  validation.md
(+1001 files in other folders)
